--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,7 +4,7 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th = link_to 'Movie Title', movies_path(sort_by: "title")
       %th Rating
       %th Release Date
       %th More Info
@@ -17,5 +17,3 @@
         %td= link_to "More about #{movie.title}", movie_path(movie)
 
 = link_to 'Add new movie', new_movie_path
-
-= link_to 'Movie Title', movies_path(sort_by: "title")
